--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,174 @@ body
     outline: none;
     width: 100%;
 }
+
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ff5454;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 1s ease;
+    opacity: 1;
+    pointer-events: none;
+  }
+  
+  .startButton {
+    appearance: button;
+    background-color: #212121;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: din-round, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 13px 25px;
+    text-align: center;
+    text-transform: uppercase;
+    touch-action: manipulation;
+    transform: translateZ(0);
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    opacity: 0;
+    transition: opacity 1s ease;
+    pointer-events: all;
+    z-index: 20;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .startButton:after {
+    background-clip: padding-box;
+    background-color: #484848;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    bottom: -4px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+  }
+  
+  .startButton:hover:not(:disabled) {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+  }
+  
+  .startButton:main,
+  .startButton:focus {
+    user-select: auto;
+  }
+  
+  .startButton:hover {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+  }
+  
+  .startButton:disabled {
+    cursor: auto;
+  }
+  
+  .loader {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .svg-loader {
+    position: fixed;
+    width: 100px;
+    opacity: 1;
+    transition: opacity 1s ease;
+  }
+  
+  @-webkit-keyframes rotating /* Safari and Chrome */ {
+    from {
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes rotating {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(360deg);
+      -moz-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  .rotating {
+    -webkit-animation: rotating 3s linear infinite;
+    -moz-animation: rotating 3s linear infinite;
+    -ms-animation: rotating 3s linear infinite;
+    -o-animation: rotating 3s linear infinite;
+    animation: rotating 3s linear infinite;
+  }
+  
+  .welcome-text {
+    margin-bottom: 25px;
+  }
+  
+  .welcome-div {
+    opacity: 0;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 20;
+    transition: opacity 1s ease;
+  }
+  
+  h1 {
+    font-family: din-round, sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+  }
+  
+  h2 {
+    font-family: din-round, sans-serif;
+    font-size: 25px;
+    font-weight: 300;
+    text-align: center;
+    color: white;
+    margin-bottom: 10px;
+  }
+  
