--- a/src/style.css
+++ b/src/style.css
@@ -227,6 +227,7 @@ body
     white-space: nowrap;
     opacity: 0;
     transition: opacity 0.5s ease;
+    transition: bottom 1.5s ease;
     pointer-events: all;
     z-index: 20;
     max-width: 90%;
@@ -252,4 +253,86 @@ body
   .time{
     margin: 0;
   }
+
+  .endScreen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color:#ff5454;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 1s ease;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  button{
+    appearance: button;
+    background-color: #212121;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: din-round, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 20px;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 13px 25px;
+    text-align: center;
+    text-transform: uppercase;
+    touch-action: manipulation;
+    transform: translateZ(0) translateX(-50%);;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    transition: bottom 1.5s ease;
+    pointer-events: all;
+    z-index: 20;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  button:after {
+    background-clip: padding-box;
+    background-color: #484848;
+    border: solid transparent;
+    border-radius: 16px;
+    border-width: 0 0 4px;
+    bottom: -4px;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+  }
+
+  .restartButton{
+    position: fixed;
+    bottom: 50px;
+    left: 50%;
+    opacity: 0;
+    z-index: 1000;
+  }
+
+  .restartButton:hover:not(:disabled) {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+  }
+  
   
